Update the contents.

--- a/index.html
+++ b/index.html
@@ -50,11 +50,15 @@
                         <progress value="100" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">.NET Core 3.1</label>
+                        <label class="left-label">.NET 5</label>
                         <progress value="100" max="100"></progress>
                     </li>
                     <li>
                         <label class="left-label">Web API</label>
+                        <progress value="100" max="100"></progress>
+                    </li>
+					<li>
+                        <label class="left-label">.NET Core MVC</label>
                         <progress value="100" max="100"></progress>
                     </li>
                     <li>
@@ -68,14 +72,6 @@
 					<li>
                         <label class="left-label">jQuery</label>
                         <progress value="80" max="100"></progress>
-                    </li>
-					<li>
-                        <label class="left-label">NodeJS</label>
-                        <progress value="80" max="100"></progress>
-                    </li>
-					<li>
-                        <label class="left-label">Angular</label>
-                        <progress value="70" max="100"></progress>
                     </li>
 					<li>
                         <label class="left-label">Html/Css</label>
@@ -92,19 +88,19 @@
 						  JavaScript, jQuery, Angular</span></li>
                     </li>
                     <li>
-                        <label class="left-label">Backend</label><span class="label-value">ASP.NET Core MVC, ASP.NET MVC, ASP.NET, NodeJS + Express</span></li>
+                        <label class="left-label">Backend</label><span class="label-value">Web API, ASP.NET Core MVC, ASP.NET MVC, ASP.NET, NodeJS + Express</span></li>
                     </li>
                     <li>
                         <label class="left-label">Database</label><span class="label-value">SQL Server, MySQL, PostgreSQL</span></li>
                     </li>
 					<li>
-                        <label class="left-label">NoSQL</label><span class="label-value">MongoDB, Redis</span></li>
+                        <label class="left-label">NoSQL</label><span class="label-value">MongoDB, Redis, Cassandra</span></li>
                     </li>
 					<li>
                         <label class="left-label">SA / SD</label><span class="label-value">OOAD, OOP, UML, Design Patterns</span></li>
                     </li>
 					<li>
-                        <label class="left-label">Others</label><span class="label-value">Docker, kubernetes, Nginx, RabbitMQ, ActiveMQ, Git, Gitflow, Github, GitLab, GitLab Flow, GitLab CI/CD, Test-driven development(TDD), Behavior-driven development(BDD), Unit Test(NUnit)</span></li>
+                        <label class="left-label">Others</label><span class="label-value">kubernetes, Docker, Docker Compose, Nginx, RabbitMQ, ActiveMQ, Git, Gitflow, Github, GitLab, GitLab Flow, GitLab CI/CD, Jenkins, Test-driven Development(TDD), Behavior-driven Development(BDD), Unit Test(NUnit)</span></li>
                     </li>
                 </ul>
             </div>
@@ -131,13 +127,13 @@
                 <hr>
 				<p contenteditable="true">
 				  <div>
-				    Yi-Bin works for web software development for over 15 years, and has system analysis experience for over 10 years. Now he is the role of System Architect in Unitech Electronics Co., LTD. His main work is establishing software development policies and quality assurance management, and developing in-house common packages as libraries to improve software quality and reduce the development cost.
+				    Yi-Bin works for web software development for over 15 years, and has system analysis experience for over 10 years. Now he is the role of System Architect in Lightning Speed Co., Ltd. His main work is establishing the development framework based on the microservice architecture for the coming generation of the software product, setting up the software development policies and quality assurance management, and developing in-house common packages as libraries to improve software quality and reduce the development cost.
 				  </div>
 				  <div>
 				    <br>
 				  </div>
 				  <div>
-				    He has deep understandings of System Analysis and Design, including Object-Oriented Analysis and Design, Object-Oriented Programming, Unified Modeling Language and Design Patterns, and focuses on .NET Framework solutions for a long time, including the software development of .NET Core 3.1, Web API, ASP.NET MVC, WCF, ASP.NET and SOAP Web Services. Besides .NET Framework solutions, he is also familiar with NodeJS and Angular.
+				    He has deep understandings of System Analysis and Design, including Object-Oriented Analysis and Design, Object-Oriented Programming, Unified Modeling Language and Design Patterns, and focuses on .NET Framework solutions for a long time, including the software development of .NET 5, Web API, ASP.NET MVC, WCF, ASP.NET and SOAP Web Services.
 				  </div>
 				  <div>
 				    <br>
@@ -149,7 +145,7 @@
 				    <br>
 				  </div>
 				  <div>
-				    Specialties: Software Engineering, System Analysis and Design, Object-Oriented Analysis, Object-Oriented Programming, Service-Oriented Architecture, design and realization of microservices architecture, Docker, GitFlow, Kubernetes, RabbitMQ, NodeJS, Angular, and .NET Framework solution, including .NET Core 3.1, Web API, ASP.NET MVC, WCF, LINQ, ASP.NET, SOAP Web Services.
+				    Specialties: Software Engineering, System Analysis and Design, Object-Oriented Analysis, Object-Oriented Programming, Service-Oriented Architecture, design and realization of microservices architecture, Kubernetes, Docker, GitFlow, RabbitMQ, and .NET Framework solution, including .NET 5, Web API, ASP.NET MVC, WCF, LINQ, ASP.NET, SOAP Web Services.
 			       </div>
 				</p>
             </div>		
@@ -157,24 +153,55 @@
                 <h2 class="info-header"><i class="iconfont icon-work"></i> <span class="info-title">Experience</span></h2>
                 <hr>
                 <ul class="experience-list">
-                    <li>
-                        <h3>System Architect&nbsp;&nbsp;2020-02-present</h3>
-						<h4><I>Unitech Electronics Co., LTD., Taipei, Taiwan</I></h4> 
+				    <li>
+                        <h3>System Architect&nbsp;&nbsp;2021-01 ~ present</h3>
+						<h4><I>Lightning Speed Co., Ltd., Kaohsiung, Taiwan</I></h4> 
                         <p contenteditable="true">
 						  <div>
-						    Establishing software development policies and quality assurance management, and developing in-house common packages to improve software quality and reduce the development cost, including as follow:
+						    Establishing the development framework based on the microservice architecture for the coming generation of the software product, setting up the software development policies and quality assurance management, and developing in-house common packages as libraries to improve software quality and reduce the development cost, including as follow:
 						  </div>
 						  <div>
 						      <br/>
 							  <ul>
-							    <li>Setting up GitLab using docker container to manage and maintain the source codes of software projects.</li>
+							    <li>Setting up GitLab using kubernetes to manage and maintain the source codes of software projects.</li>
 								<li>Importing Gitflow with Merge Request, and usually called it GitLab Flow.</li>
+								<li>Using Entity Framework Core Migrations to keep in sync with the database and models easier and evolve the database schema when the model changed over time, including MySQL and Cassandra.</li>
 								<li>Importing EditorConfig to maintain the consistent code style.</li>
-								<li>Importing Unit Test to improve software quality assurance.</li>
-								<li>Developing the common packages as libraries, including Fast ORM Development, RDLC Report exporting to files directly, and Authorization based on OAuth 2.0.</li>
-								<li>Building the high availability MQ based on RabbitMQ to ensure to process 2,500 requests in one second via dynamic scaling of nodes.</li>
+								<li>Importing Unit Test of NUnit to improve software quality assurance.</li>
+                                <li>Using Test-Driven Development (TDD) by NUnit to make the code clearer, self-testing easier and instruct developers to write new code.</li>
+								<li>Using Swashbuckle to generate Swagger UI for the service contract and generate the document for APIs easier.</li>
 							    <li>Setting up a private Nuget Server to manage and maintain the common packages as libraries to make team members referencing the libraries as individual dlls directly and consistently.</li>
-								<li>Setting up automatically deploys via GitLab CI/CD to reduce the workload of developers and make them more concentrating on developments.</li>
+								<li>Deploying the microservices applications to Kubernetes Service on CentOS of in-house Server, including frontend application and backend application.</li>
+							  </ul>
+						  </div>						  
+						  
+						  <div>
+						    Mentor the developers from junior to senior, and help them to shut the crunch issues.
+						  </div>
+						  <div><br></div>
+						  <div>
+						    Related technologies are C#, .NET 5, Web API, Entity Framework Core Migrations, SQL Server, MySQL, Cassandra, MongoDB, Kubernetes, Docker, RabbitMQ, GitLab and Gitflow
+						  </div>
+						</p>
+                    </li>
+                    <li>
+                        <h3>System Architect&nbsp;&nbsp;2020-02 ~ 2020-11</h3>
+						<h4><I>Unitech Electronics Co., LTD., Taipei, Taiwan</I></h4> 
+                        <p contenteditable="true">
+						  <div>
+						    Established software development policies and quality assurance management, and developing in-house common packages to improve software quality and reduce the development cost, including as follow:
+						  </div>
+						  <div>
+						      <br/>
+							  <ul>
+							    <li>Set up GitLab using docker container to manage and maintain the source codes of software projects.</li>
+								<li>Imported Gitflow with Merge Request, and usually called it GitLab Flow.</li>
+								<li>Imported EditorConfig to maintain the consistent code style.</li>
+								<li>Imported Unit Test to improve software quality assurance.</li>
+								<li>Developed the common packages as libraries, including Fast ORM Development, RDLC Report exporting to files directly, and Authorization based on OAuth 2.0.</li>
+								<li>Built the high availability MQ based on RabbitMQ to ensure to process 2,500 requests in one second via dynamic scaling of nodes.</li>
+							    <li>Set up a private Nuget Server to manage and maintain the common packages as libraries to make team members referencing the libraries as individual dlls directly and consistently.</li>
+								<li>Set up automatically deploys via GitLab CI/CD to reduce the workload of developers and make them more concentrating on developments.</li>
 							  </ul>
 						  </div>						  
 						  
@@ -183,10 +210,10 @@
 						  </div>
 						  <div><br></div>
 						  <div>
-						    Support PM or SA to make the risk assessment for those projects under negotiation, and propose the technologic plans for those.</div>
+						    Supported PM or SA to make the risk assessment for those projects under negotiation, and propose the technologic plans for those.</div>
 						  <div><br></div>
 						  <div>
-						    Mentor the developers from junior to senior, and help them to shut the crunch issues.
+						    Mentored the developers from junior to senior, and help them to shut the crunch issues.
 						  </div>
 						  <div><br></div>
 						  <div>
@@ -195,7 +222,7 @@
 						</p>
                     </li>
                     <li>
-                        <h3>Technical Manager&nbsp;&nbsp;2019-09-2020-02</h3>
+                        <h3>Technical Manager&nbsp;&nbsp;2019-09 ~ 2020-02</h3>
 						<h4><I>MAYO Human Capital Inc., Taipei, Taiwan</I></h4> 
                         <p contenteditable="true">
 						  <div>
@@ -210,9 +237,7 @@
 								<li>Used Swashbuckle to generate Swagger UI for the service contract and generate the document for APIs easier.</li>
 								<li>Used the RedLock.net to realize distributed locks to meet ACID policy and respond to the high concurrency of online transactions.</li>
 								<li>Used Message Queue (MQ) to make sure the messages deliver consistent between the microservices to setup the low-latency microservices.</li>
-								<li>Setup the API Gateway with Ocelot, which is an Open Source cross-platform API Gateway built using .NET core, to acts as a single entry point into a system for the microservice-based application.</li>
-								<li>To deploy the microservices applications more convenient, including making the migration of microservices and scaling microservices dynamically, all applications were packaged based on docker images, and used Kubernetes to manage docker containers and deployed the microservices applications on Kubernetes.</li>
-							  </ul>
+	 						  </ul>
 						  </div>
 						  <div>
 						  Related technologies are C#, .NET Core 3.1, Web API, Entity Framework Core Migrations, Ocelot, SQL Server, Redis, ActiveMQ. Docker, Kubernetes
@@ -220,8 +245,8 @@
 						</p>
                     </li>
 					<li>
-                        <h3>Senior Software Engineer&nbsp;&nbsp;2018-11-2019-08</h3>
-						<h4><I>Start-up Company, Taipei, Taiwan</I></h4> 
+                        <h3>Senior Software Engineer&nbsp;&nbsp;2018-11 ~ 2019-08</h3>
+						<h4><I>Game Leading Digital Technology Co., Ltd., Taipei, Taiwan</I></h4> 
                         <p contenteditable="true">
 						  <div>
 						    Co-worked with other senior engineers for a game-portal platform, and was responsible for developments of Finance module.</div>
@@ -242,7 +267,7 @@
 						</p>
                     </li>
 					<li>
-                        <h3>Technical Supervisor&nbsp;&nbsp;2016-12-2018-10</h3>
+                        <h3>Technical Supervisor&nbsp;&nbsp;2016-12 ~ 2018-10</h3>
 						<h4><I>Foxconn Technology Group, Shenzhen, China</I></h4> 
                         <p contenteditable="true">
 						  <div>
@@ -261,7 +286,7 @@
 						</p>
                     </li>
 					<li>
-                        <h3>Technical Manager&nbsp;&nbsp;2013-08-2016-12</h3>
+                        <h3>Technical Manager&nbsp;&nbsp;2013-08 ~ 2016-12</h3>
 						<h4><I>International Integrated Systems, Inc., Kaohsiung, Taiwan</I></h4> 
                         <p contenteditable="true">
 						  <div>
@@ -286,7 +311,7 @@
 						</p>
                     </li>
 					<li>
-                        <h3>Chief Engineer&nbsp;&nbsp;2009-06-2013-01</h3>
+                        <h3>Chief Engineer&nbsp;&nbsp;2009-06 ~ 2013-01</h3>
 						<h4><I>Asia Casual Entertainment online tech. Co., Ltd., Kaohsiung, Taiwan</I></h4> 
                         <p contenteditable="true">
 						  <div>
