Update the contents.

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <ul class="experience-list">
 				    <li>
                         <h3>System Architect&nbsp;&nbsp;2021-01 ~ present</h3>
-						<h4><I>Lightning Speed Co., Ltd., Kaohsiung, Taiwan</I></h4> 
+						<h4><I>Lightning Speed Co., Ltd.(Start-up Company), Kaohsiung, Taiwan</I></h4> 
                         <p contenteditable="true">
 						  <div>
 						    Establishing the development framework based on the microservice architecture for the coming generation of the software product, setting up the software development policies and quality assurance management, and developing in-house common packages as libraries to improve software quality and reduce the development cost, including as follow:
