--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <progress value="100" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">.NET 5</label>
+                        <label class="left-label">.NET 6</label>
                         <progress value="100" max="100"></progress>
                     </li>
                     <li>
@@ -67,7 +67,7 @@
                     </li>
 					<li>
                         <label class="left-label">JavaScript</label>
-                        <progress value="80" max="100"></progress>
+                        <progress value="70" max="100"></progress>
                     </li>
 					<li>
                         <label class="left-label">jQuery</label>
@@ -84,11 +84,10 @@
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">Frontend</label><span class="label-value">
-						  JavaScript, jQuery, Angular</span></li>
+                        <label class="left-label">Frontend</label><span class="label-value">JavaScript, jQuery</span></li>
                     </li>
                     <li>
-                        <label class="left-label">Backend</label><span class="label-value">Web API, ASP.NET Core MVC, ASP.NET MVC, ASP.NET, NodeJS + Express</span></li>
+                        <label class="left-label">Backend</label><span class="label-value">Web API, NET 6, ASP.NET MVC, ASP.NET</span></li>
                     </li>
                     <li>
                         <label class="left-label">Database</label><span class="label-value">SQL Server, MySQL, PostgreSQL</span></li>
@@ -100,7 +99,13 @@
                         <label class="left-label">SA / SD</label><span class="label-value">OOAD, OOP, UML, Design Patterns</span></li>
                     </li>
 					<li>
-                        <label class="left-label">Others</label><span class="label-value">kubernetes, Docker, Docker Compose, Nginx, RabbitMQ, ActiveMQ, Git, Gitflow, Github, GitLab, GitLab Flow, GitLab CI/CD, Jenkins, Test-driven Development(TDD), Behavior-driven Development(BDD), Unit Test(NUnit)</span></li>
+                        <label class="left-label">Cloud</label><span class="label-value">Azure</span></li>
+                    </li>
+					<li>
+                        <label class="left-label">Certificate</label><span class="label-value">AZ-900</span></li>
+                    </li>
+					<li>
+                        <label class="left-label">Others</label><span class="label-value">kubernetes, Docker, Docker Compose, Nginx, RabbitMQ, ActiveMQ, Git, Gitflow, A Azure DevOps, Github, GitLab, GitLab Flow, GitLab CI/CD, Jenkins, Test-driven development(TDD), Behavior-driven development(BDD), Unit Test(NUnit)</span></li>
                     </li>
                 </ul>
             </div>
@@ -127,7 +132,7 @@
                 <hr>
 				<p contenteditable="true">
 				  <div>
-				    Yi-Bin works for web software development for over 15 years, and has system analysis experience for over 10 years. Now he is the role of System Architect in Lightning Speed Co., Ltd. His main work is establishing the development framework based on the microservice architecture for the coming generation of the software product, setting up the software development policies and quality assurance management, and developing in-house common packages as libraries to improve software quality and reduce the development cost.
+				    Yi-Bin works for web software development for over 15 years and has system analysis experience for over 10 years. Now he is the role of Technical Manager in WiAdvance. His main work is establishing the development framework based on the microservice architecture for the Value Added Service(VAS) Platform as a SaaS Product, setting up the software development policies based on Scrum, Introducing NUnit as the Tool for Test Driven Design to improve the software quality and reduce the development cost, and deploying the VAS Platform to Azure Kubernetes Service to reduce the DevOps cost.
 				  </div>
 				  <div>
 				    <br>
@@ -145,7 +150,7 @@
 				    <br>
 				  </div>
 				  <div>
-				    Specialties: Software Engineering, System Analysis and Design, Object-Oriented Analysis, Object-Oriented Programming, Service-Oriented Architecture, design and realization of microservices architecture, Kubernetes, Docker, GitFlow, RabbitMQ, and .NET Framework solution, including .NET 5, Web API, ASP.NET MVC, WCF, LINQ, ASP.NET, SOAP Web Services.
+				    Specialties: Software Engineering, System Analysis and Design, Object-Oriented Analysis, Object-Oriented Programming, Service-Oriented Architecture, design and realization of microservices architecture, Kubernetes, Docker, GitFlow, RabbitMQ, and .NET Framework solution, including .NET 6, Web API, ASP.NET MVC, WCF, LINQ, ASP.NET, SOAP Web Services.
 			       </div>
 				</p>
             </div>		
@@ -154,24 +159,24 @@
                 <hr>
                 <ul class="experience-list">
 				    <li>
-                        <h3>System Architect&nbsp;&nbsp;2021-01 ~ present</h3>
-						<h4><I>Lightning Speed Co., Ltd.(Start-up Company), Kaohsiung, Taiwan</I></h4> 
+                        <h3>Technical Manager&nbsp;&nbsp;2021-09 ~ Present</h3>
+						<h4><I>WiAdvance Technology Corporation, New Taipei, Taiwan</I></h4> 
                         <p contenteditable="true">
 						  <div>
-						    Establishing the development framework based on the microservice architecture for the coming generation of the software product, setting up the software development policies and quality assurance management, and developing in-house common packages as libraries to improve software quality and reduce the development cost, including as follow:
+						    Establishing the development framework based on the microservice architecture for Value Added Service(VAS) Platform as a SaaS Product, setting up the software development policies and quality assurance management, and developing in-house common packages as libraries to improve software quality and reduce the development cost, including as follow:
 						  </div>
 						  <div>
 						      <br/>
 							  <ul>
-							    <li>Setting up GitLab using kubernetes to manage and maintain the source codes of software projects.</li>
-								<li>Importing Gitflow with Merge Request, and usually called it GitLab Flow.</li>
+							    <li>Using Azure DevOps to manage and maintain the source codes of software projects, and using the scrum template to set up the development process for the RD team.</li>
+								<li>Importing Gitflow with Pull Request</li>
 								<li>Using Entity Framework Core Migrations to keep in sync with the database and models easier and evolve the database schema when the model changed over time, including MySQL and Cassandra.</li>
 								<li>Importing EditorConfig to maintain the consistent code style.</li>
 								<li>Importing Unit Test of NUnit to improve software quality assurance.</li>
                                 <li>Using Test-Driven Development (TDD) by NUnit to make the code clearer, self-testing easier and instruct developers to write new code.</li>
 								<li>Using Swashbuckle to generate Swagger UI for the service contract and generate the document for APIs easier.</li>
-							    <li>Setting up a private Nuget Server to manage and maintain the common packages as libraries to make team members referencing the libraries as individual dlls directly and consistently.</li>
-								<li>Deploying the microservices applications to Kubernetes Service on CentOS of in-house Server, including frontend application and backend application.</li>
+							    <li>Setting up a private NuGet Registry to manage and maintain the common packages as libraries to make team members referencing the libraries as individual dlls directly and consistently.</li>
+								<li>Deploying the microservices applications to Azure Kubernetes Service, including frontend application and backend application.</li>
 							  </ul>
 						  </div>						  
 						  
@@ -180,7 +185,7 @@
 						  </div>
 						  <div><br></div>
 						  <div>
-						    Related technologies are C#, .NET 5, Web API, Entity Framework Core Migrations, SQL Server, MySQL, Cassandra, MongoDB, Kubernetes, Docker, RabbitMQ, GitLab and Gitflow
+						    Related technologies are C#, .NET 6, Web API, Entity Framework Core Migrations, SQL Server, MySQL, Cassandra, MongoDB, Azure Kubernetes Service, Docker, RabbitMQ and Gitflow
 						  </div>
 						</p>
                     </li>
@@ -218,29 +223,6 @@
 						  <div><br></div>
 						  <div>
 						    Related technologies are C#, .NET Core 3.1, Web API, Entity Framework Core Migrations, SQL Server, Docker, RabbitMQ, GitLab, Gitflow and CI/CD
-						  </div>
-						</p>
-                    </li>
-                    <li>
-                        <h3>Technical Manager&nbsp;&nbsp;2019-09 ~ 2020-02</h3>
-						<h4><I>MAYO Human Capital Inc., Taipei, Taiwan</I></h4> 
-                        <p contenteditable="true">
-						  <div>
-						    Designed the development framework based on the microservice architecture for the coming generation of the software product, including as follow:
-						  </div>
-						  <div>
-						      <br/>
-							  <ul>
-							    <li>Used the Repository Pattern to realize the Dependency Inversion Principle (DIP), and accessed database via a light ORM component, which was based on ADO.NET and self-development in 2010, and similarly with Dapper ORM released in 2016.</li>
-								<li>Used Entity Framework Core Migrations To keep in sync with the database and models easier and evolve the database schema when the model changed over time.</li>
-								<li>Used Test-Driven Development (TDD) by NUnit to make the code clearer, self-testing easier and instruct developers to write new code.</li>
-								<li>Used Swashbuckle to generate Swagger UI for the service contract and generate the document for APIs easier.</li>
-								<li>Used the RedLock.net to realize distributed locks to meet ACID policy and respond to the high concurrency of online transactions.</li>
-								<li>Used Message Queue (MQ) to make sure the messages deliver consistent between the microservices to setup the low-latency microservices.</li>
-	 						  </ul>
-						  </div>
-						  <div>
-						  Related technologies are C#, .NET Core 3.1, Web API, Entity Framework Core Migrations, Ocelot, SQL Server, Redis, ActiveMQ. Docker, Kubernetes
 						  </div>
 						</p>
                     </li>
@@ -332,11 +314,11 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>National Kaohsiung First University of Sience and Technology, Kaohsiung, Taiwan&nbsp;&nbsp;2014-09-2016-01</h3>
+                        <h3>National Kaohsiung First University of Sience and Technology, Kaohsiung, Taiwan&nbsp;&nbsp;2014-09 ~ 2016-01</h3>
                         <h4><I>Master of Engineering in Software Engineering</I></h4>
                     </li>
 					<li>
-                        <h3>I-Shou University, Kaohsiung, Taiwan&nbsp;&nbsp;2002-09-2005-06</h3>
+                        <h3>I-Shou University, Kaohsiung, Taiwan&nbsp;&nbsp;2002-09 ~ 2005-06</h3>
                         <h4><I>Bachelor of Industrial Engineering</I></h4>
                     </li>
                 </ul>
