--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						<label class="left-label">Others</label><span class="label-value">kubernetes, Docker, Docker
 							Compose, Nginx, RabbitMQ, ActiveMQ, Git, Gitflow, A Azure DevOps, Github, GitLab, GitLab
 							Flow, GitLab CI/CD, Jenkins, Test-driven development(TDD), Behavior-driven development(BDD),
-							Unit Test(NUnit), Agile Development</span>
+							Unit Test(NUnit), Agile Development, Scrum</span>
 					</li>
 					</li>
 				</ul>
